fixed a little layout issue

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -315,6 +315,8 @@ a:hover { color: #fff; background-color:#000; }
 }
 
 #agreement_new_account {
+  height:13px;
+  width:13px;
   margin:0;
 }
 
